Add new activity DiceRoll

--- a/HappyBirthday/app/src/main/res/layout/activity_main.xml
+++ b/HappyBirthday/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,11 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:fontFamily="sans-serif-light"
+        android:selectAllOnFocus="true"
+        android:shadowColor="@color/white"
+        android:shadowDx="25"
+        android:shadowDy="25"
+        android:shadowRadius="55"
         android:text="From Emma."
         android:textColor="@android:color/black"
         android:textSize="36dp"
