--- a/HappyBirthday/app/src/main/res/values-night/themes.xml
+++ b/HappyBirthday/app/src/main/res/values-night/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.HappyBirthday" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/green_light</item>
-        <item name="colorPrimaryVariant">@color/green</item>
+<!--        <item name="colorPrimary">@color/green_light</item>-->
+<!--        <item name="colorPrimaryVariant">@color/green</item>-->
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/blue_light</item>
@@ -19,6 +19,10 @@
         <item name="radioButtonStyle">@style/Widget.TipTime.CompoundButton.RadioButton</item>
         <!-- For switches -->
         <item name="switchStyle">@style/Widget.TipTime.CompoundButton.Switch</item>
+
+
+        <item name="colorPrimary">@color/blue_200</item>
+        <item name="colorPrimaryVariant">@color/blue_500</item>
     </style>
 
 </resources>
