--- a/HappyBirthday/app/src/main/res/values/themes.xml
+++ b/HappyBirthday/app/src/main/res/values/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.HappyBirthday" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/green</item>
-        <item name="colorPrimaryVariant">@color/green_dark</item>
+<!--        <item name="colorPrimary">@color/green</item>-->
+<!--        <item name="colorPrimaryVariant">@color/green_dark</item>-->
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/blue</item>
@@ -17,5 +17,8 @@
         <item name="radioButtonStyle">@style/Widget.TipTime.CompoundButton.RadioButton</item>
         <!-- Switches -->
         <item name="switchStyle">@style/Widget.TipTime.CompoundButton.Switch</item>
+
+        <item name="colorPrimary">@color/blue_500</item>
+        <item name="colorPrimaryVariant">@color/blue_700</item>
     </style>
 </resources>
